# OpenGL-Planet

./: CMakeLists.txt  config.hpp.in  main.cpp  mainwindow.cpp  mainwindow.h  openglwindow.cpp  openglwindow.h
ControlWidget/: CMakeLists.txt  controlWidget.cpp  controlWidget.hpp  controlWidget.ui
Resources/: CMakeLists.txt  fragmentShader.glsl  vertexShader.glsl
Sunsystem/: CMakeLists.txt  compostium.hpp  fileLoader.cpp  fileLoader.hpp  sunsystem.cpp  sunsystem.hpp  tree.hpp
